2010-09-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButton.m (-keyDown:): Remove unused code found by
	static analyser.
	* Source/NSColor.m (-colorUsingColorSpace:): Add missing break
	statements.
	* Source/NSColor.m (initSystemColors): Remove unused variable.

2010-09-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-_viewWillMoveToWindow:): When calling
	[-releaseGState] make sure to keep the value of _allocate_gstate.

2010-09-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-resizeWithOldSuperviewSize): Remove unneeded
	local varibales.
	* Source/NSView.m (-bitmapImageRepForCachingDisplayInRect:):
	Create the image rep with [-initWithFocusedViewRect:], that way it
	will better map to the following -cacheDisplayInRect:... call.
	Also don't leak the image.
	* Source/NSView.m (-cacheDisplayInRect:...): Don't leak the image
	rep.
	* Source/NSView.m (-_subtreeDescriptionWithPrefix:): Don't leak
	the returned string.

2010-09-15 German Arias <german@xelalug.org>
	* Panels/Spanish.lproj/GSPrintPanel.gorm: Changed the width
	of a label.

2010-09-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSParagraphStyle.m:
	* Source/NSPopUpButton.m:
	* Source/NSMenuItemCell.m:
	* Source/NSFont.m: Fix more unsigned int / ints that should
	be NSUInteger/NSInteger

2010-09-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSTextStorage.m: Fix an unisgned->NSUInteger

2010-09-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-releaseGState): Check if the window and it's
	gstate exist before undefining the gstate.
	Patch by Georg Fleischmann <G.Fleischmann@vhf.de>.
	* Source/NSView.m (-_viewWillMoveToWindow:): Call [-releaseGState].

2010-09-13 Riccardo Mottola

	* Source/NSBitmapImageRep+JPEG.m: remove useless double statement
	* Source/tiff.m: remove unused variable and assignment

2010-09-12 German Arias <german@xelalug.org>
	* Panels/Spanish.lproj/GSFindPanel.gorm: Fixed a misspelling.